cabal-version:       2.4

name:                sokoban
version:             0.1.0.0
synopsis:            Sokoban game in a terminal
-- description:
-- bug-reports:
license:             Unlicense
license-file:        LICENSE
author:              Bernd Beuster
maintainer:          bernd.beuster@gmail.com
-- copyright:
category:            Game
extra-source-files:  CHANGELOG.md

executable sokoban
  main-is:             Main.hs
  other-modules:       Board,
                       Levels,
                       Sokoban
  -- other-extensions:
  build-depends:       base ^>=4.14.1.0,
                       array ^>=0.5.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010
